--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
   },
+  "homepage": "http://Ghassanooooo.github.io/myapp",
   "scripts": {
     "build-css": "node-sass-chokidar src/sass/ -o src/styles/",
-    "watch-css":
-      "npm run build-css && node-sass-chokidar src/sass/ -o src/styles/ --watch --recursive",
+    "watch-css": "npm run build-css && node-sass-chokidar src/sass/ -o src/styles/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
